# krystals

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
benches/: dilithium_poly.rs  dilithium_polyvec.rs  keccak.rs  keccak_bench.rs  kem_keypair_bench.rs  kyber_gen_matrix.rs  kyber_indcpa.rs  kyber_poly.rs  kyber_polyvec.rs
cref/: Cargo.toml  build.rs
cref/src/: dilithium.rs  kyber.rs  lib.rs  randombytes.rs
crystals-cref/: Cargo.toml  build.rs
crystals-cref/src/: dilithium.rs  kyber.rs  lib.rs  randombytes.rs
src/: ciphertext.rs  keccak.rs  kem.rs  lib.rs  macros.rs  params.rs  pke.rs  polymat.rs  polyvec.rs  unsafe_utils.rs
src/field/: dilithium.rs  kyber.rs  mod.rs
src/indcpa/: fips202.rs  mod.rs  pke.rs  prf.rs  xof.rs
src/keccak/: fips202.rs  keccak_f1600.rs  mod.rs
src/kyber/: ciphertext.rs  kem.rs  mod.rs  pke.rs
src/poly/: dilithium.rs  kyber.rs  mod.rs
src/utils/: mod.rs  split.rs
src/utils/unsafe_utils/: flatten.rs  mod.rs  split.rs
tests/: buffer_rng.rs  kat.rs  kem_kat_tests.rs
tests/KATs/: Makefile
