[package]
name = "krystals"
version = "0.0.1"
authors = ["Kamyar Mohajerani <kammoh@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
description = "Rust implementation of CRYSTALS-Kyber and CRYSTALS-Dilithium"
homepage = "https://github.com/kammoh/crystals-rs"
repository = "https://github.com/kammoh/crystals-rs.git"
categories = ["cryptography", "no-std"]
# documentation = "https://docs.rs/krystals"
rust-version = "1.59.0"
edition = "2021"
autobenches = true

[lib]
bench = false # disable libtest benchmark harness

[dependencies]
array-init = "2.0.1"
crunchy = { version = "0.2.2", default-features = false, features = [
    "limit_64",
] }
paste = "1.0.7"
rand = { version = "0.8.5", default-features = false }
static_assertions = "1.1.0"
secrecy = { version = "0.8.0", default-features = false }
zeroize = { version = "1.5.7", default-features = false, features = [
    "zeroize_derive",
    "aarch64",
] }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
hex-literal = "0.3.4"
rand = "0.8.5"
crystals-cref = { path = "./cref" }
sha3 = { version = "0.10.1", default-features = false }
tiny-keccak = { version = "2.0.2", features = [
    "fips202",
    "keccak",
    "sha3",
    "shake",
] }


[features]
default = ["pub_internals"]
std = ["alloc", "rand/std", "rand/std_rng"]
alloc = ["zeroize/alloc", "secrecy/alloc"]
pub_internals = []                          # some internal modules are made public
unstable = []

[[bench]]
name = "keccak"
harness = false

[[bench]]
name = "kyber_poly"
harness = false
required-features = ["pub_internals"]

[[bench]]
name = "dilithium_poly"
harness = false
required-features = ["pub_internals"]

[[bench]]
name = "kyber_polyvec"
harness = false
required-features = ["pub_internals"]

[[bench]]
name = "dilithium_polyvec"
harness = false
required-features = ["pub_internals"]

[[bench]]
name = "kyber_gen_matrix"
harness = false
required-features = ["pub_internals"]

[[bench]]
name = "kyber_indcpa"
harness = false


[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["cref"]

[profile.dev]


[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
overflow-checks = false  # Disable integer overflow checks.
incremental = true       # Speed up build times by caching intermediate results.

[build-dependencies]
autocfg = "1"
