[package]
name = "crystals-cref"
version = "0.1.0"
edition = "2021"
license = "CC0"
description = "Rust bindings for reference implementations of CRYSTALS-Kyber and CRYSTALS-Dilithium"
homepage = "https://github.com/kammoh/crystals-rs"
repository = "https://github.com/kammoh/crystals-rs.git"
categories = ["cryptography", "external-ffi-bindings"]

[dependencies]
cty = "0.2.2"
ringbuffer = { version = "0.8.4", default-features = false }

[features]
default = ["std", "randombytes"]
randombytes = ["std"]  # determinitstic randombytes replacement
std = []

[dev-dependencies]


[build-dependencies]
bindgen = "0.60.1"
cargo-emit = "0.2.1"
cc = "1.0.73"
glob = "0.3.0"
